--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp">
 
-    <com.ns.yc.ycprogresslib.RingProgressBar
-        android:id="@+id/bar_percent"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_margin="5dp"
-        android:background="#94aac1"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/bar_percent"
-        android:layout_alignTop="@+id/bar_percent"
-        android:text="默认显示模式：百分比+单位"/>
+        android:gravity="left|center"
+        android:layout_marginTop="10dp"
+        android:text="1.关于仿杀毒软件进度条控件"/>
 
 
-    <com.ns.yc.ycprogresslib.RingProgressBar
-        android:id="@+id/bar_null"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/bar_percent"
-        android:layout_margin="5dp"
-        android:background="#94aac1"
-        app:dotColor="@android:color/holo_green_dark"
-        app:dotBgColor="@android:color/holo_red_light"
-        app:showMode="NULL"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/bar_null"
-        android:layout_alignTop="@+id/bar_null"
-        android:text="空显示模式"
-        />
+        android:gravity="left|center"
+        android:layout_marginTop="10dp"
+        android:text="1.下载圆形进度条自定义控件"/>
 
-    <com.ns.yc.ycprogresslib.RingProgressBar
-        android:id="@+id/bar_all"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/bar_null"
-        android:layout_margin="5dp"
-        android:background="#94aac1"
-        app:showMode="ALL"
-        app:percentTextSize="70sp"
-        app:unitText="分"
-        app:unitTextAlignMode="CN"
-        app:unitTextSize="20sp"
-        app:buttonTextSize="20sp"
-        app:buttonTopOffset="20dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/bar_all"
-        android:layout_alignTop="@+id/bar_all"
-        android:text="全显显示模式：百分比+单位+按钮"/>
-    
-</RelativeLayout>
+</LinearLayout>
