--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -34,8 +34,9 @@
 
     <com.ns.yc.ycprogresslib.CircleProgressbar
         android:id="@+id/pb_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:text="0%"
         app:circle_color="@color/change_color" />
 
