--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,21 @@
         android:layout_marginTop="10dp"
         android:text="1.下载圆形进度条自定义控件"/>
 
+
+    <Button
+        android:id="@+id/btn_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center"
+        android:layout_marginTop="10dp"
+        android:text="1.线程是否安全测试,否"/>
+
+    <Button
+        android:id="@+id/btn_4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center"
+        android:layout_marginTop="10dp"
+        android:text="1.线程是否安全测试，是"/>
+
 </LinearLayout>
