--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -26,14 +26,14 @@
         android:layout_height="wrap_content"
         android:text="开始"/>
 
-    <com.ns.yc.ycprogresslib.CircleProgressbar
+    <com.yc.circleprogresslib.CircleProgressbar
         android:id="@+id/pb_1"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:text="进度条" />
 
 
-    <com.ns.yc.ycprogresslib.CircleProgressbar
+    <com.yc.circleprogresslib.CircleProgressbar
         android:id="@+id/pb_2"
         android:layout_marginTop="10dp"
         android:layout_width="100dp"
