--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -29,7 +29,7 @@
             android:text="重新开始"/>
     </LinearLayout>
 
-    <com.ns.yc.ycprogresslib.NumberProgressbar
+    <com.yc.ycprogresslib.NumberProgressbar
         android:id="@+id/bar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="重新开始"/>
     </LinearLayout>
-    <com.ns.yc.ycprogresslib.NumberProgressbar
+    <com.yc.ycprogresslib.NumberProgressbar
         android:id="@+id/bar2"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
