将组件化代码基础公共module抽离出来

--- a/CommonBusiness/src/main/res/layout/activity_common_main.xml
+++ b/CommonBusiness/src/main/res/layout/activity_common_main.xml
@@ -18,30 +18,155 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left|center"
-            android:text="1.日志打印测试"/>
+            android:text="1.1日志打印测试"/>
         <Button
             android:id="@+id/btn_log2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="left|center"
-            android:text="2.日志打印测试"/>
+            android:text="1.2 日志打印测试"/>
     </LinearLayout>
 
 
 
     <Button
-        android:id="@+id/btn_2"
+        android:id="@+id/btn_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left|center"
         android:layout_marginTop="10dp"
-        android:text="2.下载圆形百分比进度条自定义控件"/>
+        android:text="2.activity任务栈管理"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_sp1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="sp存"/>
+        <Button
+            android:id="@+id/btn_sp2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="sp取"/>
+        <Button
+            android:id="@+id/btn_sp3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            android:text="fastsp存"/>
+        <Button
+            android:id="@+id/btn_sp4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="left|center"
+            android:text="fastsp取"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_mkkv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="MMKV存"/>
+        <Button
+            android:id="@+id/btn_mkkv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="MMKV取"/>
+        <Button
+            android:id="@+id/btn_mkkv3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            android:text="MMKV清除"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_disk1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="disk存"/>
+        <Button
+            android:id="@+id/btn_disk2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="disk取"/>
+        <Button
+            android:id="@+id/btn_disk3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            android:text="disk清除"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_restart1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="使用服务重启APP"/>
+        <Button
+            android:id="@+id/btn_restart2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="使用闹钟重启App"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_restart3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="launcher页面重启app"/>
+        <Button
+            android:id="@+id/btn_restart4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="查询mainifest重启App"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left|center"
         android:layout_marginTop="10dp"
